--- a/css/home-redesign.css
+++ b/css/home-redesign.css
@@ -274,7 +274,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../img/calendar-bg.jpg');
+    background-image: url('../img/calendar-bg.png');
     background-size: cover;
     background-position: center;
     opacity: 0.25;
