--- a/css/home-redesign.css
+++ b/css/home-redesign.css
@@ -326,10 +326,11 @@ body::before {
     right: 0;
     bottom: 0;
     background-image: url('../img/calendar-bg.png');
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    opacity: 0.06;
+    opacity: 0.2;
     z-index: -1;
     pointer-events: none;
 }
