fix: 背景改为平铺模式，确保右上角女生可见
🎨 调整：
- 平铺模式：repeat（整个屏幕都有插画）
- 起始位置：top right（右上角）
- 高度填满：auto 100%
- 保证女生头部在右上角可见

--- a/css/home-redesign.css
+++ b/css/home-redesign.css
@@ -345,9 +345,9 @@ body::before {
     right: 0;
     bottom: 0;
     background-image: url('../img/calendar-bg.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-size: auto 100%;
+    background-repeat: repeat;
+    background-position: top right;
     background-attachment: fixed;
     opacity: 0.2;
     z-index: -1;
