fix: 强制刷新背景图片缓存
🔄 添加 ?v=2 参数强制浏览器重新加载新图片

--- a/css/home-redesign.css
+++ b/css/home-redesign.css
@@ -344,7 +344,7 @@ body::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../img/calendar-bg.png');
+    background-image: url('../img/calendar-bg.png?v=2');
     background-size: auto 100%;
     background-repeat: repeat;
     background-position: top right;
