style: 背景改为单张图片，不重复
🎨 调整：
- background-repeat: no-repeat（只显示一张）
- background-size: cover（铺满屏幕）
- background-position: center（居中显示）

--- a/css/home-redesign.css
+++ b/css/home-redesign.css
@@ -344,10 +344,10 @@ body::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../img/calendar-bg.png?v=3');
-    background-size: contain;
-    background-repeat: repeat;
-    background-position: top center;
+    background-image: url('../img/calendar-bg.png?v=4');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     background-attachment: fixed;
     opacity: 0.3;
     z-index: -1;
